--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>la magnificarne</title>
+    <!--Geronimo hizo el codigo inicial de la pagina-->
+    <!--Jonas hizo el sketch-->
+    <!--Federico hizo paleta de colores-->
+    <!--Geronimo, Federico, Jonas hicimos el logo y nombre-->
 </head>
 <body>
-    
+    <header>
+        <p>Este sitio web es sobre una hamburgueseria</p>
+    </header>
 </body>
 </html>
