--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>la magnificarne</title>
+    <link rel="shortcut icon" href="hamburguesa.ico" type="image/x-icon">
     <!--Geronimo hizo el codigo inicial de la pagina-->
     <!--Jonas hizo el sketch-->
     <!--Federico hizo paleta de colores-->
@@ -12,6 +13,9 @@
 <body>
     <header>
         <p>Este sitio web es sobre una hamburgueseria</p>
+        <img src="./burger.png" width="40%" height="40%" alt="imagen de la hamburguesa"> 
+    <img src="./hamburguesa.jpg" width="20%" height="20%" alt="imagen de hamburguesa"><br>
+    <a href="nuevo folio.html">siguiente pagina</a>
     </header>
 </body>
 </html>
