--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -11,11 +11,33 @@
     <!--Geronimo, Federico, Jonas hicimos el logo y nombre-->
 </head>
 <body>
+    <h1>LA MAGNIFICARNE</h1>
     <header>
-        <p>Este sitio web es sobre una hamburgueseria</p>
-        <img src="./burger.png" width="40%" height="40%" alt="imagen de la hamburguesa"> 
-    <img src="./hamburguesa.jpg" width="20%" height="20%" alt="imagen de hamburguesa"><br>
-    <a href="nuevo folio.html">siguiente pagina</a>
+    <nav>
+        <ul>
+            <li><a href="inicio.html">Presentación</a></li>
+            <li><a href="ingredientes.html">Ingredientes</a></li>
+            <li><a href="nuevo folio.html">Siguiente página</a></li>
+
+        </ul>
+    </nav>
     </header>
+        <section>
+            <h2>Sobre nosotros</h2>
+        
+        <p>Este sitio web es sobre una hamburgueseria.</p>
+        <img src="./burger.png" width="40%" height="40%" alt="imagen de la hamburguesa"> 
+    <img src="./hamburguesa.jpg" width="20%" height="20%" alt="imagen de hamburguesa">
+    
+        </section>
+        <section>
+            <l1>Servicio de cocina</l1><br>
+            <l1>Servicio de limpieza</l1><br>
+        </section>
+        <section>
+            <h3>Otras comidas</h3>
+            <img src="./pizza" width="20%" height="20%" alt="imagen de la hamburguesa"> 
+            <h3><a href="https://cookpad.com/ar/buscar/pizzas">Más información</a></h3>
+        </section>
 </body>
 </html>
