--- a/nuevo folio.html
+++ b/nuevo folio.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>nuevo folio</title>
+        <link rel="shortcut icon" href="hamburguesa.ico" type="image/x-icon">
     </head>
     <body>
-    </body>
+    
     <h1>hamburguesa</h1>
-</html>
+    <li><a href="index.html">Volver a inicio</a></li>
+    </body>
+    </html>
