--- a/nuevo folio.html
+++ b/nuevo folio.html
@@ -3,10 +3,11 @@
     <head>
         <title>nuevo folio</title>
         <link rel="shortcut icon" href="hamburguesa.ico" type="image/x-icon">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
     
-    <h1>hamburguesa</h1>
+    <h3>hamburguesa</h3>
     <li><a href="index.html">Volver a inicio</a></li>
     </body>
     </html>
