--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>la magnificarne</title>
     <link rel="shortcut icon" href="hamburguesa.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poetsen+One&display=swap" rel="stylesheet">
     <!--Geronimo hizo el codigo inicial de la pagina-->
     <!--Jonas hizo el sketch-->
     <!--Federico hizo paleta de colores-->
     <!--Geronimo, Federico, Jonas hicimos el logo y nombre-->
+   
 </head>
 <body>
     <h1>LA MAGNIFICARNE</h1>
@@ -23,16 +28,16 @@
     </nav>
     </header>
         <section>
-            <h2>Sobre nosotros</h2>
+            <h2>Más que una hamburguesería</h2>
         
         <p>Este sitio web es sobre una hamburgueseria.</p>
-        <img src="./burger.png" width="40%" height="40%" alt="imagen de la hamburguesa"> 
-    <img src="./hamburguesa.jpg" width="20%" height="20%" alt="imagen de hamburguesa">
+        <img src="./burger.png" width="25%" height="15%"   alt="imagen de la hamburguesa"> 
+    <img src="./hamburguesa.jpg" width="15%" height="15%"  alt="imagen de hamburguesa">
     
         </section>
         <section>
-            <l1>Servicio de cocina</l1><br>
-            <l1>Servicio de limpieza</l1><br>
+            <l1>Recibí tu pedido o retiralo en el restaurante que prefieras</l1><br>
+            <l1>Disfrutá de grandes descuentos y beneficios solo por registrarte</l1><br>
         </section>
         <section>
             <h3>Otras comidas</h3>
